# glsl-lsp

./: .gitignore  README.md
.github/workflows/: publish-glast.yml  publish-glsl-lsp.yml  publish-vscode.yml
client/: README.md  package-lock.json  package.json
glast/: Cargo.toml
glast/src/: interpreter.rs  lib.rs  web.rs
glast/src/parser/: ast.rs
