[package]
name = "glast"
version = "0.1.0"
edition = "2021"
authors = ["KubaP"]
description = "A crate for parsing and manipulating the OpenGL Shading Language."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KubaP/glsl-lsp/tree/master/glast"
repository = "https://github.com/KubaP/glsl-lsp"
keywords = ["GLSL", "OpenGL", "parser", "ast"]
categories = ["parser-implementations", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
macaw = { version = "0.19.1", features = ["serde"] }

[[bin]]
name = "ast_to_json"
path = "bin/ast_to_json.rs"

[[bin]]
name = "interpret_glsl"
path = "bin/interpret_glsl.rs"

[lib]
crate-type = ["cdylib", "rlib"]
